[package]
name = "colb"
version = "0.2.0"
edition = "2021"
description = "A colcon wrapper for faster change compile test cycles"
readme = "README.md"
license = "ISC"

[profile.release]
strip = true
lto = true

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
